--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@worldcoin/id": "^0.9.2",
+    "@worldcoin/idkit": "^1.3.0",
     "i": "^0.3.7",
     "next": "14.2.13",
     "react": "^18",
