--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@reown/appkit": "^1.0.2",
+    "@reown/appkit-adapter-wagmi": "^1.0.2",
+    "@tanstack/react-query": "^5.56.2",
     "@worldcoin/id": "^0.9.2",
     "@worldcoin/idkit": "^1.3.0",
     "i": "^0.3.7",
     "next": "14.2.13",
+    "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "viem": "^2.21.10",
+    "wagmi": "^2.12.12"
   },
   "devDependencies": {
     "@types/node": "^20",
