--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@worldcoin/id": "^0.9.2",
     "@worldcoin/idkit": "^1.3.0",
     "i": "^0.3.7",
+    "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "viem": "^2.21.10",
     "wagmi": "^2.12.12"
