--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@tanstack/react-query": "^5.56.2",
     "@worldcoin/id": "^0.9.2",
     "@worldcoin/idkit": "^1.3.0",
+    "axios": "^1.7.7",
     "i": "^0.3.7",
     "lucide-react": "^0.445.0",
+    "mongodb": "^6.9.0",
     "next": "14.2.13",
     "next-auth": "^4.24.7",
     "react": "^18",
