--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ethsign/sign-protocol-evm": "^1.1.1",
     "@heroicons/react": "^1.0.6",
+    "@openzeppelin/contracts": "^5.0.2",
     "@reown/appkit": "^1.0.2",
     "@reown/appkit-adapter-wagmi": "^1.0.2",
     "@tanstack/react-query": "^5.56.2",
